@startuml "school management erm diagram"

abstract class Person {
   -id: number
   -identification_number: string
   -first_name: string
   -last_name: string
   -date_of_birth: date
   -sex: string
   -email: string
   -phone_number: string
   -address: string
}


class Teacher {
   -courses: list<Course>
}

class Student {
   -gradeLevel: number
   -enrolled_classes: list<Course>
   -grades: list<Grade>
   +assignGrade(teacher: Teacher, course: Course, grade: Grade): void
}

class Course {
   -name: string
   -description: string
   +getTeachers(): list<Teacher>
   +getStudents(): list<Student>
}

class Enrollment {
   -course: Course
   -grade: string
   -remarks: string
}

Person <|-- Teacher
Person <|-- Student

Student --|> Enrollment : 0..*
Enrollment --|> Course : 0..1
Teacher --|> Course : 0..*

@enduml